(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/17:
   * Make autogen.sh properly /bin/sh portable (Simon)
     Fixes #1445464
     autogen.sh
   * patchset missed my fbrun -Wall fixes (Simon)
     util/fbrun/FbRun.cc
*06/04/16:
   * Add option to reverse desktop wheeling, patch #1034287
       session.screen0.reversewheeling: true|false
     (thanks Kalle - ice_jkpg at users.sourceforge.net)
     Screen.hh/cc fluxbox.cc Toolbar.cc IconButton.cc
   * Missing space in translation (thanks... anonymous, sf.net #1455024)
     nls/C/Translation.m
   * Set (take|send)to(next|prev)workspace offset default value to 1
     instead of the current 0 (which makes them look non-functional).
     Similarly for tab and (|next|prev|left|right)workspace.
     - Thanks Jonas Koelker (sf.net 1467926)
     FbCommandFactory.cc
   * Add "CloseAllWindows" key binding 
     (thanks Adriano Dal Bosco - adbosco at users.sourceforge.net)
     - Useful to trigger all "close" actions before flux exit (or other)
       to catch any pending file saves etc...
     WorkspaceCmd.hh/cc FbCommandFactory.cc
   * Fix all warnings with (gcc 3.4.6) -Wall, mainly sign comparisons (Simon)
     ClientPattern.cc Container.cc FbWinFrame.cc IconButton.cc IconbarTool.cc
     ScreenPlacement.hh ScreenResources.cc ToolFactory.cc Toolbar.cc
     Window.cc  FbTk/... FbPixmap.hh/cc Menu.hh Text.hh TextBox.hh/cc
   * signedness fix in Container moveItem (thanks _markt)
     Container.cc
   * Vertical toolbar (Simon)
     Toolbar.cc ToolbarItem.hh/cc IconbarTool.hh/cc IconButton.hh/cc
     ClockTool.hh/cc ButtonTool.cc WorkspaceNameTool.hh/cc Container.cc
     SystemTray.cc FbTk/TextButton.cc
*06/04/14:
   * Fix type of last_release_time, affected double click functions
     on 64-bit platforms (sf.net #1467871, thanks davidhi) (Simon)
     FbWinFrame.cc
   * Fix updating of button state (esp stick/shade)  (Simon)
     (sf.net #1281724, #1213257)
     FbTk/Button.hh/cc WinButton.cc Window.cc
*06/04/13: