@@ -2,7 +2,7 @@
 # $Id$
 
 command="`basename \"$0\"`"
-startup=~/.fluxbox/startup
+startup="$HOME/.fluxbox/startup"
 
 while [ $# -gt 0 ]; do
     case "$1" in
@@ -28,8 +28,8 @@ if [ -x "$startup" ]; then
 elif [ -r "$startup" ]; then
     exec sh "$startup"
 else
-    if [ ! -d ~/.fluxbox ]; then
-        mkdir -p ~/.fluxbox/backgrounds ~/.fluxbox/styles ~/.fluxbox/pixmaps
+    if [ ! -d "$HOME/.fluxbox" ]; then
+        mkdir -p "$HOME/.fluxbox/backgrounds" "$HOME/.fluxbox/styles" "$HOME/.fluxbox/pixmaps"
     fi
     if [ ! -r "$startup" ]; then
         ( cat << EOF
@@ -40,7 +40,7 @@ else
 # You can set your favourite wallpaper here if you don't want
 # to do it from your style.
 #
-# bsetbg -f ~/pictures/wallpaper.png
+# bsetbg -f $HOME/pictures/wallpaper.png
 #
 # This sets a black background
 
@@ -58,13 +58,13 @@ else
 # xset r rate 195 35
 #
 # Your own fonts-dir:
-# xset +fp $HOME/.font
+# xset +fp "$HOME/.fonts"
 #
 # Your favourite mouse cursor:
 # xsetroot -cursor_name right_ptr
 #
 # Change your keymap:
-# xmodmap ~/.Xmodmap
+# xmodmap "$HOME/.Xmodmap"
 
 
 
@@ -81,7 +81,7 @@ else
 
 exec @pkgbindir@/fluxbox
 # or if you want to keep a log:
-# exec @pkgbindir@/fluxbox -log ~/.fluxbox/log
+# exec @pkgbindir@/fluxbox -log "$HOME/.fluxbox/log"
 EOF
     ) > "$startup"
     fi
